--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,31 @@
     <string name="app_name">Hektagram Story</string>
     <string name="logout">Logout</string>
     <string name="cancel">Cancel</string>
-    <string name="logout_desc">Anda yakin ingin logout?</string>
+    <string name="logout_desc">Are you sure want to logout?</string>
     <string name="err_password">Password at least 8 characters</string>
     <string name="err_email">"Please enter a valid email address" </string>
+    <string name="description">Description</string>
+    <string name="name">Name</string>
+    <string name="register">Register</string>
+    <string name="detail">Detail</string>
+    <string name="ok">OK</string>
+    <string name="choose_picture">Choose a Picture</string>
+    <string name="add_story">Add Story</string>
+    <string name="no_file">Please insert the image file first</string>
+    <string name="image">IMAGE</string>
+    <string name="upload">Upload</string>
+    <string name="welcome_message">Sharing story\nwith your friends</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="login">Login</string>
+    <string name="don_t_have_account">Don\'t have account?</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="loading">Loading...</string>
+    <string name="detail_story">Detail Story</string>
+    <string name="add_photo">Add Photo</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="choose_gallery">Choose from Gallery</string>
+    <string name="preview_image">preview_image</string>
+    <string name="fab_view">fabView</string>
+    <string name="empty_input">Please fill in the blank input</string>
 </resources>
